@@ -10,13 +10,14 @@ import co.javeriana.dw.organizapp.repository.NodeAttributeRepository;
 import co.javeriana.dw.organizapp.repository.NodeRepository;
 import co.javeriana.dw.organizapp.service.NodeAttributeService;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class NodeAttributeServiceImpl implements NodeAttributeService {
+
+    private static final String NODE_ATTRIBUTE_NOT_FOUND_MESSAGE = "Atributo de nodo no encontrado con ID: ";
 
     private final NodeAttributeRepository nodeAttributeRepository;
     private final NodeRepository nodeRepository;
@@ -36,7 +37,7 @@ public class NodeAttributeServiceImpl implements NodeAttributeService {
     public List<NodeAttributeResponseDto> findAll() {
         return nodeAttributeRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -45,14 +46,14 @@ public class NodeAttributeServiceImpl implements NodeAttributeService {
         findNode(nodeId);
         return nodeAttributeRepository.findByNodoId(nodeId).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public NodeAttributeResponseDto findById(Long id) {
         NodeAttribute attribute = nodeAttributeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Atributo de nodo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NODE_ATTRIBUTE_NOT_FOUND_MESSAGE + id));
         return toDto(attribute);
     }
 
@@ -72,7 +73,7 @@ public class NodeAttributeServiceImpl implements NodeAttributeService {
     @Transactional
     public NodeAttributeResponseDto update(Long id, NodeAttributeRequestDto nodeAttributeDto) {
         NodeAttribute existingAttribute = nodeAttributeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Atributo de nodo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NODE_ATTRIBUTE_NOT_FOUND_MESSAGE + id));
         Node node = findNode(nodeAttributeDto.getNodeId());
 
         existingAttribute.setNodo(node);
@@ -87,7 +88,7 @@ public class NodeAttributeServiceImpl implements NodeAttributeService {
     @Transactional
     public void delete(Long id) {
         NodeAttribute attribute = nodeAttributeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Atributo de nodo no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(NODE_ATTRIBUTE_NOT_FOUND_MESSAGE + id));
         nodeAttributeRepository.delete(attribute);
     }
 
